# indi-3rdparty

./: CMakeLists.txt
cmake_modules/: FindFREETOUP.cmake
indi-orion-ssg3/: CMakeLists.txt  indi_orion_ssg3.xml.cmake  orion_ssg3.c  orion_ssg3.h  orion_ssg3_ccd.cpp  orion_ssg3_ccd.h
indi-toupbase/: CMakeLists.txt  indi_toupbase.h  indi_toupbase.xml.cmake
libfreetoup/: CMakeLists.txt  config.h.cmake  freetoup.c  freetoup.h  ft_cameras.c  ft_cameras.h
